<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout2 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_color_bj"
    android:clipChildren="false">

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/qmui_config_color_white"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topbar">

        <com.qmuiteam.qmui.layout.QMUILinearLayout style="@style/LinStyle">

            <TextView
                style="@style/DescriptionStyle"
                android:layout_marginStart="20dp"
                android:text="手机号" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/ETStyle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:hint="@string/pls_input_phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="11"
                android:padding="10dp" />

        </com.qmuiteam.qmui.layout.QMUILinearLayout>

        <com.qmuiteam.qmui.layout.QMUILinearLayout style="@style/LinStyle">

            <TextView
                style="@style/DescriptionStyle"
                android:layout_marginStart="20dp"
                android:text="验证码" />

            <EditText
                android:id="@+id/et_captcha"
                style="@style/ETStyle"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:hint="@string/pls_input_captcha"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="6"
                android:padding="10dp" />

            <com.xing.weight.view.DelayButton
                android:id="@+id/bt_get_captcha"
                style="@style/RoundButtonStyle"
                android:layout_width="100dp"
                android:layout_height="38dp"
                android:layout_marginStart="10dp"
                android:text="@string/get_captcha"
                android:textSize="14sp"
                app:qmui_radius="5dp" />

        </com.qmuiteam.qmui.layout.QMUILinearLayout>

        <com.qmuiteam.qmui.layout.QMUILinearLayout style="@style/LinStyle">

            <TextView
                style="@style/DescriptionStyle"
                android:layout_marginStart="20dp"
                android:text="密&#8195;码" />

            <com.xing.weight.view.CusEditText
                android:id="@+id/et_pwd"
                style="@style/ETStyle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:hint="@string/pls_input_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="20"
                android:padding="10dp" />

        </com.qmuiteam.qmui.layout.QMUILinearLayout>
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/user_agreement"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin_top" />

    <com.qmuiteam.qmui.layout.QMUILinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox">

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/bt_ok"
            style="@style/RoundButtonStyle"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/register" />

    </com.qmuiteam.qmui.layout.QMUILinearLayout>

</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout2>
