<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_color_bj">

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" />

    <com.qmuiteam.qmui.layout.QMUILinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="10dp">

        <com.qmuiteam.qmui.layout.QMUILinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/bt_bill_custom"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/bill_text1"
                android:textSize="16sp"
                app:qmui_backgroundColor="?attr/app_skin_btn_test_bg"
                app:qmui_borderColor="@color/app_color_blue"
                app:qmui_borderWidth="0px"
                app:qmui_radius="10dp" />

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/bt_outbound_custom"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/bill_text2"
                android:textSize="16sp"
                app:qmui_backgroundColor="?attr/app_skin_btn_test_bg"
                app:qmui_borderColor="@color/app_color_blue"
                app:qmui_borderWidth="0px"
                app:qmui_radius="10dp" />

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/bt_my_order"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/bill_text3"
                android:textSize="16sp"
                app:qmui_backgroundColor="?attr/app_skin_btn_test_bg"
                app:qmui_borderColor="@color/app_color_blue"
                app:qmui_borderWidth="0px"
                app:qmui_radius="10dp" />

        </com.qmuiteam.qmui.layout.QMUILinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

        <com.qmuiteam.qmui.layout.QMUILinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/bt_my_goods"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/bill_text4"
                android:textSize="16sp"
                app:qmui_backgroundColor="?attr/app_skin_btn_test_bg"
                app:qmui_borderColor="@color/app_color_blue"
                app:qmui_borderWidth="0px"
                app:qmui_radius="10dp" />

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/bt_my_user"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/bill_text5"
                android:textSize="16sp"
                app:qmui_backgroundColor="?attr/app_skin_btn_test_bg"
                app:qmui_borderColor="@color/app_color_blue"
                app:qmui_borderWidth="0px"
                app:qmui_radius="10dp" />

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/bt_more"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/bill_text6"
                android:textSize="16sp"
                app:qmui_backgroundColor="?attr/app_skin_btn_test_bg"
                app:qmui_borderColor="@color/app_color_blue"
                app:qmui_borderWidth="0px"
                app:qmui_radius="10dp" />

        </com.qmuiteam.qmui.layout.QMUILinearLayout>


    </com.qmuiteam.qmui.layout.QMUILinearLayout>

</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>