<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout2 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_color_bj">

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.qmuiteam.qmui.layout.QMUILinearLayout
        android:id="@+id/lin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/qmui_config_color_white"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topbar">

        <com.qmuiteam.qmui.layout.QMUILinearLayout style="@style/LinStyle">

            <TextView
                style="@style/DescriptionStyle"
                android:layout_marginStart="10dp"
                android:text="货品名称" />

            <EditText
                android:id="@+id/et_goods_name"
                style="@style/ETStyle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:hint="@string/pls_input_goods_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:padding="10dp" />

        </com.qmuiteam.qmui.layout.QMUILinearLayout>

        <com.qmuiteam.qmui.layout.QMUILinearLayout style="@style/LinStyle">

            <TextView
                style="@style/DescriptionStyle"
                android:layout_marginStart="10dp"
                android:text="型&#8195;&#8195;号" />

            <EditText
                android:id="@+id/et_goods_model"
                style="@style/ETStyle"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/pls_input_goods_model"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="6"
                android:padding="10dp" />

        </com.qmuiteam.qmui.layout.QMUILinearLayout>

        <com.qmuiteam.qmui.layout.QMUILinearLayout style="@style/LinStyle">

            <TextView
                style="@style/DescriptionStyle"
                android:layout_marginStart="10dp"
                android:text="规&#8195;&#8195;格" />

            <EditText
                android:id="@+id/et_goods_specs"
                style="@style/ETStyle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:hint="@string/pls_input_goods_specs"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="6"
                android:padding="10dp" />

        </com.qmuiteam.qmui.layout.QMUILinearLayout>

        <com.qmuiteam.qmui.layout.QMUILinearLayout style="@style/LinStyle">

            <TextView
                style="@style/DescriptionStyle"
                android:layout_marginStart="10dp"
                android:text="单&#8195;&#8195;价" />

            <EditText
                android:id="@+id/et_goods_price"
                style="@style/ETStyle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                android:hint="@string/pls_input_goods_price"
                android:maxLength="8"
                android:padding="10dp" />

        </com.qmuiteam.qmui.layout.QMUILinearLayout>

        <com.qmuiteam.qmui.layout.QMUILinearLayout style="@style/LinStyle">

            <TextView
                style="@style/DescriptionStyle"
                android:layout_marginStart="10dp"
                android:text="描&#8195;&#8195;述" />

            <EditText
                android:id="@+id/et_goods_address"
                style="@style/ETStyle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:inputType="textMultiLine"
                android:imeOptions="actionDone"
                android:maxLines="3"
                android:hint="@string/pls_input_goods_describe"
                android:maxLength="50"
                android:padding="10dp" />

        </com.qmuiteam.qmui.layout.QMUILinearLayout>


        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/bt_save"
            style="@style/RoundButtonStyle"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:text="@string/save" />

    </com.qmuiteam.qmui.layout.QMUILinearLayout>

</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout2>
