<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout2 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_color_bj"
    android:clipChildren="false">

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/qmui_config_color_white"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topbar">

        <com.qmuiteam.qmui.layout.QMUILinearLayout style="@style/LinStyle">

            <TextView
                style="@style/DescriptionStyle"
                android:layout_marginStart="20dp"
                android:text="公司名称" />

            <EditText
                android:id="@+id/et_company_name"
                style="@style/ETStyle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:hint="@string/pls_input_company_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:padding="10dp" />

        </com.qmuiteam.qmui.layout.QMUILinearLayout>

        <com.qmuiteam.qmui.layout.QMUILinearLayout style="@style/LinStyle">

            <TextView
                style="@style/DescriptionStyle"
                android:layout_marginStart="20dp"
                android:text="负&#8194;责&#8194;人" />

            <EditText
                android:id="@+id/et_company_charge"
                style="@style/ETStyle"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:hint="@string/pls_input_company_charge"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="10"
                android:padding="10dp" />


        </com.qmuiteam.qmui.layout.QMUILinearLayout>

        <com.qmuiteam.qmui.layout.QMUILinearLayout style="@style/LinStyle">

            <TextView
                style="@style/DescriptionStyle"
                android:layout_marginStart="20dp"
                android:text="联系方式" />

            <EditText
                android:id="@+id/et_company_phone"
                style="@style/ETStyle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:hint="@string/pls_input_company_phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="20"
                android:padding="10dp" />

        </com.qmuiteam.qmui.layout.QMUILinearLayout>

        <com.qmuiteam.qmui.layout.QMUILinearLayout style="@style/LinStyle">

            <TextView
                style="@style/DescriptionStyle"
                android:layout_marginStart="20dp"
                android:text="联系地址" />

            <EditText
                android:id="@+id/et_company_address"
                style="@style/ETStyle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="@null"
                android:hint="@string/pls_input_company_address"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:maxLength="100"
                android:padding="10dp" />

        </com.qmuiteam.qmui.layout.QMUILinearLayout>
    </LinearLayout>


    <com.qmuiteam.qmui.layout.QMUILinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/lin_top">

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/bt_save"
            style="@style/RoundButtonStyle"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/save" />

    </com.qmuiteam.qmui.layout.QMUILinearLayout>

</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout2>
